myparser.output
Terminals unused in grammar

    DEL_DOT


Grammar

    0 $accept: input $end

    1 input: ε
    2      | declarations main_func
    3      | main_func

    4 declarations: declarations declaration
    5             | declaration

    6 declaration: variable_declaration
    7            | comp
    8            | const
    9            | function

   10 main_func: KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

   11 variable_declaration: identifier DEL_COLON types DEL_SMCOLON

   12 basic_data_type: KW_INT
   13                | KW_SCALAR
   14                | KW_STR
   15                | KW_BOOLEAN

   16 types: basic_data_type
   17      | TK_IDENTIFIER

   18 identifier: TK_IDENTIFIER
   19           | TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   20           | TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   21           | identifier DEL_COMMA TK_IDENTIFIER
   22           | identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET

   24 comp: KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

   25 comp_body: comp_field
   26          | comp_field comp_body

   27 comp_field: comp_identifiers DEL_COLON types DEL_SMCOLON
   28           | comp_function

   29 comp_identifiers: HASH TK_IDENTIFIER
   30                 | HASH TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   31                 | HASH TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   32                 | comp_identifiers DEL_COMMA HASH TK_IDENTIFIER
   33                 | comp_identifiers DEL_COMMA HASH TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   34                 | comp_identifiers DEL_COMMA HASH TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET

   35 comp_function: KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   36              | KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW types DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

   37 const: KW_CONST identifier AOP_ASSIGN expr DEL_COLON basic_data_type DEL_SMCOLON

   38 expr: identifier_expr
   39     | TK_STRING
   40     | KW_TRUE
   41     | KW_FALSE
   42     | DEL_LPAR expr DEL_RPAR
   43     | arithmetic_expr
   44     | relational_expr
   45     | logical_statements
   46     | function_statement

   47 arithmetic_expr: TK_INTEGER
   48                | TK_REAL
   49                | expr OP_POWER expr
   50                | expr OP_MULT expr
   51                | expr OP_DIV expr
   52                | expr OP_MOD expr
   53                | expr OP_PLUS expr
   54                | expr OP_MINUS expr
   55                | OP_PLUS expr
   56                | OP_MINUS expr

   57 identifier_expr: TK_IDENTIFIER
   58                | HASH TK_IDENTIFIER
   59                | TK_IDENTIFIER DEL_LBRACKET TK_IDENTIFIER DEL_RBRACKET
   60                | TK_IDENTIFIER DEL_LBRACKET arithmetic_expr DEL_RBRACKET

   61 relational_expr: expr ROP_LESS expr
   62                | expr ROP_LESSEQUALS expr
   63                | expr ROP_GREATER expr
   64                | expr ROP_GREATEREQUALS expr
   65                | expr ROP_EQUALS expr
   66                | expr ROP_NOTEQUALS expr

   67 logical_statements: KW_NOT expr
   68                   | expr KW_AND expr
   69                   | expr KW_OR expr

   70 function: KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

   72 params: ε
   73       | TK_IDENTIFIER DEL_COLON basic_data_type
   74       | TK_IDENTIFIER DEL_COLON basic_data_type DEL_COMMA params
   75       | TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET DEL_COLON basic_data_type
   76       | TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET DEL_COLON basic_data_type DEL_COMMA params

   77 func_body: ε
   78          | variable_declaration func_body
   79          | const func_body
   80          | statements func_body

   81 statements: if_statement
   82           | while_statement
   83           | assign_statement
   84           | for_statement
   85           | array_int_comprehension
   86           | array_comprehension
   87           | return_statement
   88           | break_statement
   89           | continue_statement
   90           | function_statement DEL_SMCOLON

   91 statement_body: ε
   92               | variable_declaration statement_body
   93               | const statement_body
   94               | statements statement_body

   95 assign_statement: TK_IDENTIFIER AOP_ASSIGN expr DEL_SMCOLON
   96                 | TK_IDENTIFIER AOP_PLUSASSIGN expr DEL_SMCOLON
   97                 | TK_IDENTIFIER AOP_MINASSIGN expr DEL_SMCOLON
   98                 | TK_IDENTIFIER AOP_MULASSIGN expr DEL_SMCOLON
   99                 | TK_IDENTIFIER AOP_DIVASSIGN expr DEL_SMCOLON
  100                 | TK_IDENTIFIER AOP_MODASSIGN expr DEL_SMCOLON

  101 if_statement: KW_IF DEL_LPAR expr DEL_RPAR DEL_COLON statement_body KW_ENDIF DEL_SMCOLON
  102             | KW_IF DEL_LPAR expr DEL_RPAR DEL_COLON statement_body KW_ELSE DEL_COLON statements KW_ENDIF DEL_SMCOLON

  103 while_statement: KW_WHILE DEL_LPAR expr DEL_RPAR DEL_COLON statement_body KW_ENDWHILE DEL_SMCOLON

  104 for_statement: KW_FOR TK_IDENTIFIER KW_IN DEL_LBRACKET expr DEL_COLON expr DEL_RBRACKET DEL_COLON statement_body KW_ENDFOR DEL_SMCOLON
  105              | KW_FOR TK_IDENTIFIER KW_IN DEL_LBRACKET expr DEL_COLON expr DEL_COLON expr DEL_RBRACKET DEL_COLON statement_body KW_ENDFOR DEL_SMCOLON

  106 array_int_comprehension: TK_IDENTIFIER AOP_COLONASSIGN DEL_LBRACKET expr KW_FOR TK_IDENTIFIER DEL_COLON TK_INTEGER DEL_RBRACKET DEL_COLON types DEL_SMCOLON

  107 array_comprehension: TK_IDENTIFIER AOP_COLONASSIGN DEL_LBRACKET expr KW_FOR TK_IDENTIFIER DEL_COLON types KW_IN TK_IDENTIFIER KW_OF TK_INTEGER DEL_RBRACKET DEL_COLON types DEL_SMCOLON

  108 break_statement: KW_BREAK DEL_SMCOLON

  109 continue_statement: KW_CONTINUE DEL_SMCOLON

  110 return_statement: KW_RETURN DEL_SMCOLON
  111                 | KW_RETURN expr DEL_SMCOLON

  112 function_statement: TK_IDENTIFIER DEL_LPAR DEL_RPAR
  113                   | TK_IDENTIFIER DEL_LPAR function_arguments DEL_RPAR

  114 function_arguments: expr
  115                   | expr DEL_COMMA function_arguments


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_IDENTIFIER <str> (258) 17 18 19 20 21 22 23 24 29 30 31 32 33 34 35 36 57 58 59 60 70 71 73 74 75 76 95 96 97 98 99 100 104 105 106 107 112 113
    TK_INTEGER <str> (259) 19 22 30 33 47 106 107
    TK_REAL <str> (260) 48
    TK_STRING <str> (261) 39
    KW_INT (262) 12
    KW_SCALAR (263) 13
    KW_STR (264) 14
    KW_BOOLEAN (265) 15
    KW_TRUE (266) 40
    KW_FALSE (267) 41
    KW_CONST (268) 37
    KW_IF (269) 101 102
    KW_ELSE (270) 102
    KW_ENDIF (271) 101 102
    KW_FOR (272) 104 105 106 107
    KW_IN (273) 104 105 107
    KW_ENDFOR (274) 104 105
    KW_WHILE (275) 103
    KW_ENDWHILE (276) 103
    KW_BREAK (277) 108
    KW_CONTINUE (278) 109
    KW_NOT (279) 67
    KW_AND (280) 68
    KW_OR (281) 69
    KW_DEF (282) 10 35 36 70 71
    KW_ENDDEF (283) 10 35 36 70 71
    KW_MAIN (284) 10
    KW_RETURN (285) 110 111
    KW_COMP (286) 24
    KW_ENDCOMP (287) 24
    KW_OF (288) 107
    OP_PLUS (289) 53 55
    OP_MINUS (290) 54 56
    OP_MULT (291) 50
    OP_DIV (292) 51
    OP_MOD (293) 52
    OP_POWER (294) 49
    ROP_EQUALS (295) 65
    ROP_NOTEQUALS (296) 66
    ROP_LESS (297) 61
    ROP_LESSEQUALS (298) 62
    ROP_GREATER (299) 63
    ROP_GREATEREQUALS (300) 64
    AOP_ASSIGN (301) 37 95
    AOP_PLUSASSIGN (302) 96
    AOP_MINASSIGN (303) 97
    AOP_MULASSIGN (304) 98
    AOP_DIVASSIGN (305) 99
    AOP_MODASSIGN (306) 100
    AOP_COLONASSIGN (307) 106 107
    AOP_ARROW (308) 36 71
    DEL_SMCOLON (309) 10 11 24 27 35 36 37 70 71 90 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    DEL_LPAR (310) 10 35 36 42 70 71 101 102 103 112 113
    DEL_RPAR (311) 10 35 36 42 70 71 101 102 103 112 113
    DEL_COMMA (312) 21 22 23 32 33 34 74 76 115
    DEL_LBRACKET (313) 19 20 22 23 30 31 33 34 59 60 75 76 104 105 106 107
    DEL_RBRACKET (314) 19 20 22 23 30 31 33 34 59 60 75 76 104 105 106 107
    DEL_COLON (315) 10 11 24 27 35 36 37 70 71 73 74 75 76 101 102 103 104 105 106 107
    DEL_DOT (316)
    HASH (317) 29 30 31 32 33 34 58


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    input (64)
        on left: 1 2 3
        on right: 0
    declarations <str> (65)
        on left: 4 5
        on right: 2 4
    declaration <str> (66)
        on left: 6 7 8 9
        on right: 4 5
    main_func <str> (67)
        on left: 10
        on right: 2 3
    variable_declaration <str> (68)
        on left: 11
        on right: 6 78 92
    basic_data_type <str> (69)
        on left: 12 13 14 15
        on right: 16 37 71 73 74 75 76
    types <str> (70)
        on left: 16 17
        on right: 11 27 36 106 107
    identifier <str> (71)
        on left: 18 19 20 21 22 23
        on right: 11 21 22 23 37
    comp <str> (72)
        on left: 24
        on right: 7
    comp_body <str> (73)
        on left: 25 26
        on right: 24 26
    comp_field <str> (74)
        on left: 27 28
        on right: 25 26
    comp_identifiers <str> (75)
        on left: 29 30 31 32 33 34
        on right: 27 32 33 34
    comp_function <str> (76)
        on left: 35 36
        on right: 28
    const <str> (77)
        on left: 37
        on right: 8 79 93
    expr <str> (78)
        on left: 38 39 40 41 42 43 44 45 46
        on right: 37 42 49 50 51 52 53 54 55 56 61 62 63 64 65 66 67 68 69 95 96 97 98 99 100 101 102 103 104 105 106 107 111 114 115
    arithmetic_expr <str> (79)
        on left: 47 48 49 50 51 52 53 54 55 56
        on right: 43 60
    identifier_expr <str> (80)
        on left: 57 58 59 60
        on right: 38
    relational_expr <str> (81)
        on left: 61 62 63 64 65 66
        on right: 44
    logical_statements <str> (82)
        on left: 67 68 69
        on right: 45
    function <str> (83)
        on left: 70 71
        on right: 9
    params <str> (84)
        on left: 72 73 74 75 76
        on right: 35 36 70 71 74 76
    func_body <str> (85)
        on left: 77 78 79 80
        on right: 10 35 36 70 71 78 79 80
    statements <str> (86)
        on left: 81 82 83 84 85 86 87 88 89 90
        on right: 80 94 102
    statement_body <str> (87)
        on left: 91 92 93 94
        on right: 92 93 94 101 102 103 104 105
    assign_statement <str> (88)
        on left: 95 96 97 98 99 100
        on right: 83
    if_statement <str> (89)
        on left: 101 102
        on right: 81
    while_statement <str> (90)
        on left: 103
        on right: 82
    for_statement <str> (91)
        on left: 104 105
        on right: 84
    array_int_comprehension <str> (92)
        on left: 106
        on right: 85
    array_comprehension <str> (93)
        on left: 107
        on right: 86
    break_statement <str> (94)
        on left: 108
        on right: 88
    continue_statement <str> (95)
        on left: 109
        on right: 89
    return_statement <str> (96)
        on left: 110 111
        on right: 87
    function_statement <str> (97)
        on left: 112 113
        on right: 46 90
    function_arguments <str> (98)
        on left: 114 115
        on right: 113 115


State 0

    0 $accept: • input $end
    1 input: ε •  [$end]
    2      | • declarations main_func
    3      | • main_func
    4 declarations: • declarations declaration
    5             | • declaration
    6 declaration: • variable_declaration
    7            | • comp
    8            | • const
    9            | • function
   10 main_func: • KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   11 variable_declaration: • identifier DEL_COLON types DEL_SMCOLON
   18 identifier: • TK_IDENTIFIER
   19           | • TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   20           | • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   21           | • identifier DEL_COMMA TK_IDENTIFIER
   22           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   24 comp: • KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON
   37 const: • KW_CONST identifier AOP_ASSIGN expr DEL_COLON basic_data_type DEL_SMCOLON
   70 function: • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 1
    KW_CONST       shift, and go to state 2
    KW_DEF         shift, and go to state 3
    KW_COMP        shift, and go to state 4

    $default  reduce using rule 1 (input)

    input                 go to state 5
    declarations          go to state 6
    declaration           go to state 7
    main_func             go to state 8
    variable_declaration  go to state 9
    identifier            go to state 10
    comp                  go to state 11
    const                 go to state 12
    function              go to state 13


State 1

   18 identifier: TK_IDENTIFIER •  [AOP_ASSIGN, DEL_COMMA, DEL_COLON]
   19           | TK_IDENTIFIER • DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   20           | TK_IDENTIFIER • DEL_LBRACKET DEL_RBRACKET

    DEL_LBRACKET  shift, and go to state 14

    $default  reduce using rule 18 (identifier)


State 2

   18 identifier: • TK_IDENTIFIER
   19           | • TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   20           | • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   21           | • identifier DEL_COMMA TK_IDENTIFIER
   22           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   37 const: KW_CONST • identifier AOP_ASSIGN expr DEL_COLON basic_data_type DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 1

    identifier  go to state 15


State 3

   10 main_func: KW_DEF • KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   70 function: KW_DEF • TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | KW_DEF • TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 16
    KW_MAIN        shift, and go to state 17


State 4

   24 comp: KW_COMP • TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 18


State 5

    0 $accept: input • $end

    $end  shift, and go to state 19


State 6

    2 input: declarations • main_func
    4 declarations: declarations • declaration
    6 declaration: • variable_declaration
    7            | • comp
    8            | • const
    9            | • function
   10 main_func: • KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   11 variable_declaration: • identifier DEL_COLON types DEL_SMCOLON
   18 identifier: • TK_IDENTIFIER
   19           | • TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   20           | • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   21           | • identifier DEL_COMMA TK_IDENTIFIER
   22           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | • identifier DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   24 comp: • KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON
   37 const: • KW_CONST identifier AOP_ASSIGN expr DEL_COLON basic_data_type DEL_SMCOLON
   70 function: • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 1
    KW_CONST       shift, and go to state 2
    KW_DEF         shift, and go to state 3
    KW_COMP        shift, and go to state 4

    declaration           go to state 20
    main_func             go to state 21
    variable_declaration  go to state 9
    identifier            go to state 10
    comp                  go to state 11
    const                 go to state 12
    function              go to state 13


State 7

    5 declarations: declaration •

    $default  reduce using rule 5 (declarations)


State 8

    3 input: main_func •

    $default  reduce using rule 3 (input)


State 9

    6 declaration: variable_declaration •

    $default  reduce using rule 6 (declaration)


State 10

   11 variable_declaration: identifier • DEL_COLON types DEL_SMCOLON
   21 identifier: identifier • DEL_COMMA TK_IDENTIFIER
   22           | identifier • DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | identifier • DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET

    DEL_COMMA  shift, and go to state 22
    DEL_COLON  shift, and go to state 23


State 11

    7 declaration: comp •

    $default  reduce using rule 7 (declaration)


State 12

    8 declaration: const •

    $default  reduce using rule 8 (declaration)


State 13

    9 declaration: function •

    $default  reduce using rule 9 (declaration)


State 14

   19 identifier: TK_IDENTIFIER DEL_LBRACKET • TK_INTEGER DEL_RBRACKET
   20           | TK_IDENTIFIER DEL_LBRACKET • DEL_RBRACKET

    TK_INTEGER    shift, and go to state 24
    DEL_RBRACKET  shift, and go to state 25


State 15

   21 identifier: identifier • DEL_COMMA TK_IDENTIFIER
   22           | identifier • DEL_COMMA TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | identifier • DEL_COMMA TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   37 const: KW_CONST identifier • AOP_ASSIGN expr DEL_COLON basic_data_type DEL_SMCOLON

    AOP_ASSIGN  shift, and go to state 26
    DEL_COMMA   shift, and go to state 22


State 16

   70 function: KW_DEF TK_IDENTIFIER • DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | KW_DEF TK_IDENTIFIER • DEL_LPAR params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    DEL_LPAR  shift, and go to state 27


State 17

   10 main_func: KW_DEF KW_MAIN • DEL_LPAR DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    DEL_LPAR  shift, and go to state 28


State 18

   24 comp: KW_COMP TK_IDENTIFIER • DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    DEL_COLON  shift, and go to state 29


State 19

    0 $accept: input $end •

    $default  accept


State 20

    4 declarations: declarations declaration •

    $default  reduce using rule 4 (declarations)


State 21

    2 input: declarations main_func •

    $default  reduce using rule 2 (input)


State 22

   21 identifier: identifier DEL_COMMA • TK_IDENTIFIER
   22           | identifier DEL_COMMA • TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | identifier DEL_COMMA • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET

    TK_IDENTIFIER  shift, and go to state 30


State 23

   11 variable_declaration: identifier DEL_COLON • types DEL_SMCOLON
   12 basic_data_type: • KW_INT
   13                | • KW_SCALAR
   14                | • KW_STR
   15                | • KW_BOOLEAN
   16 types: • basic_data_type
   17      | • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 31
    KW_INT         shift, and go to state 32
    KW_SCALAR      shift, and go to state 33
    KW_STR         shift, and go to state 34
    KW_BOOLEAN     shift, and go to state 35

    basic_data_type  go to state 36
    types            go to state 37


State 24

   19 identifier: TK_IDENTIFIER DEL_LBRACKET TK_INTEGER • DEL_RBRACKET

    DEL_RBRACKET  shift, and go to state 38


State 25

   20 identifier: TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET •

    $default  reduce using rule 20 (identifier)


State 26

   37 const: KW_CONST identifier AOP_ASSIGN • expr DEL_COLON basic_data_type DEL_SMCOLON
   38 expr: • identifier_expr
   39     | • TK_STRING
   40     | • KW_TRUE
   41     | • KW_FALSE
   42     | • DEL_LPAR expr DEL_RPAR
   43     | • arithmetic_expr
   44     | • relational_expr
   45     | • logical_statements
   46     | • function_statement
   47 arithmetic_expr: • TK_INTEGER
   48                | • TK_REAL
   49                | • expr OP_POWER expr
   50                | • expr OP_MULT expr
   51                | • expr OP_DIV expr
   52                | • expr OP_MOD expr
   53                | • expr OP_PLUS expr
   54                | • expr OP_MINUS expr
   55                | • OP_PLUS expr
   56                | • OP_MINUS expr
   57 identifier_expr: • TK_IDENTIFIER
   58                | • HASH TK_IDENTIFIER
   59                | • TK_IDENTIFIER DEL_LBRACKET TK_IDENTIFIER DEL_RBRACKET
   60                | • TK_IDENTIFIER DEL_LBRACKET arithmetic_expr DEL_RBRACKET
   61 relational_expr: • expr ROP_LESS expr
   62                | • expr ROP_LESSEQUALS expr
   63                | • expr ROP_GREATER expr
   64                | • expr ROP_GREATEREQUALS expr
   65                | • expr ROP_EQUALS expr
   66                | • expr ROP_NOTEQUALS expr
   67 logical_statements: • KW_NOT expr
   68                   | • expr KW_AND expr
   69                   | • expr KW_OR expr
  112 function_statement: • TK_IDENTIFIER DEL_LPAR DEL_RPAR
  113                   | • TK_IDENTIFIER DEL_LPAR function_arguments DEL_RPAR

    TK_IDENTIFIER  shift, and go to state 39
    TK_INTEGER     shift, and go to state 40
    TK_REAL        shift, and go to state 41
    TK_STRING      shift, and go to state 42
    KW_TRUE        shift, and go to state 43
    KW_FALSE       shift, and go to state 44
    KW_NOT         shift, and go to state 45
    OP_PLUS        shift, and go to state 46
    OP_MINUS       shift, and go to state 47
    DEL_LPAR       shift, and go to state 48
    HASH           shift, and go to state 49

    expr                go to state 50
    arithmetic_expr     go to state 51
    identifier_expr     go to state 52
    relational_expr     go to state 53
    logical_statements  go to state 54
    function_statement  go to state 55


State 27

   70 function: KW_DEF TK_IDENTIFIER DEL_LPAR • params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   71         | KW_DEF TK_IDENTIFIER DEL_LPAR • params DEL_RPAR AOP_ARROW basic_data_type DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   72 params: ε •  [DEL_RPAR]
   73       | • TK_IDENTIFIER DEL_COLON basic_data_type
   74       | • TK_IDENTIFIER DEL_COLON basic_data_type DEL_COMMA params
   75       | • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET DEL_COLON basic_data_type
   76       | • TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET DEL_COLON basic_data_type DEL_COMMA params

    TK_IDENTIFIER  shift, and go to state 56

    $default  reduce using rule 72 (params)

    params  go to state 57


State 28

   10 main_func: KW_DEF KW_MAIN DEL_LPAR • DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    DEL_RPAR  shift, and go to state 58


State 29

   24 comp: KW_COMP TK_IDENTIFIER DEL_COLON • comp_body KW_ENDCOMP DEL_SMCOLON
   25 comp_body: • comp_field
   26          | • comp_field comp_body
   27 comp_field: • comp_identifiers DEL_COLON types DEL_SMCOLON
   28           | • comp_function
   29 comp_identifiers: • HASH TK_IDENTIFIER
   30                 | • HASH TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   31                 | • HASH TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   32                 | • comp_identifiers DEL_COMMA HASH TK_IDENTIFIER
   33                 | • comp_identifiers DEL_COMMA HASH TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   34                 | • comp_identifiers DEL_COMMA HASH TK_IDENTIFIER DEL_LBRACKET DEL_RBRACKET
   35 comp_function: • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR DEL_COLON func_body KW_ENDDEF DEL_SMCOLON
   36              | • KW_DEF TK_IDENTIFIER DEL_LPAR params DEL_RPAR AOP_ARROW types DEL_COLON func_body KW_ENDDEF DEL_SMCOLON

    KW_DEF  shift, and go to state 59
    HASH    shift, and go to state 60

    comp_body         go to state 61
    comp_field        go to state 62
    comp_identifiers  go to state 63
    comp_function     go to state 64


State 30

   21 identifier: identifier DEL_COMMA TK_IDENTIFIER •  [AOP_ASSIGN, DEL_COMMA, DEL_COLON]
   22           | identifier DEL_COMMA TK_IDENTIFIER • DEL_LBRACKET TK_INTEGER DEL_RBRACKET
   23           | identifier DEL_COMMA TK_IDENTIFIER • DEL_LBRACKET DEL_RBRACKET

    DEL_LBRACKET  shift, and go to state 65

    $default  reduce using rule 21 (identifier)


State 31

   17 types: TK_IDENTIFIER •

    $default  reduce using rule 17 (types)


State 32

   12 basic_data_type: KW_INT •

    $default  reduce using rule 12 (basic_data_type)


State 33

   13 basic_data_type: KW_SCALAR •

    $default  reduce using rule 13 (basic_data_type)


State 34

   14 basic_data_type: KW_STR •

    $default  reduce using rule 14 (basic_data_type)


State 35

   15 basic_data_type: KW_BOOLEAN •

    $default  reduce using rule 15 (basic_data_type)


State 36

   16 types: basic_data_type •

    $default  reduce using rule 16 (types)


State 37

   11 variable_declaration: identifier DEL_COLON types • DEL_SMCOLON

    DEL_SMCOLON  shift, and go to state 66


State 38

   19 identifier: TK_IDENTIFIER DEL_LBRACKET TK_INTEGER DEL_RBRACKET •

    $default  reduce using rule 19 (identifier)


State 39

   57 identifier_expr: TK_IDENTIFIER •  [KW_FOR, KW_AND, KW_OR, OP_PLUS, OP_MINUS, OP_MULT, OP_DIV, OP_MOD, OP_POWER, ROP_EQUALS, ROP_NOTEQUALS, ROP_LESS, ROP_LESSEQUALS, ROP_GREATER, ROP_GREATEREQUALS, DEL_SMCOLON, DEL_RPAR, DEL_COMMA, DEL_RBRACKET, DEL_COLON]
   59                | TK_IDENTIFIER • DEL_LBRACKET TK_IDENTIFIER DEL_RBRACKET
   60                | TK_IDENTIFIER • DEL_LBRACKET arithmetic_expr DEL_RBRACKET
  112 function_statement: TK_IDENTIFIER • DEL_LPAR DEL_RPAR
  113                   | TK_IDENTIFIER • DEL_LPAR function_arguments DEL_RPAR

    DEL_LPAR      shift, and go to state 67
    DEL_LBRACKET  shift, and go to state 68

    $default  reduce using rule 57 (identifier_expr)


State 40

   47 arithmetic_expr: TK_INTEGER •

    $default  reduce using rule 47 (arithmetic_expr)


State 41

   48 arithmetic_expr: TK_REAL •

    $default  reduce using rule 48 (arithmetic_expr)


State 42

   39 expr: TK_STRING •

    $default  reduce using rule 39 (expr)


State 43

   40 expr: KW_TRUE •

    $default  reduce using rule 40 (expr)


State 44

   41 expr: KW_FALSE •

    $default  reduce using rule 41 (expr)


State 45

   38 expr: • identifier_expr
   39     | • TK_STRING
   40     | • KW_TRUE
   41     | • KW_FALSE
   42     | • DEL_LPAR expr DEL_RPAR
   43     | • arithmetic_expr
   44     | • relational_expr
   45     | • logical_statements
   46     | • function_statement
   47 arithmetic_expr: • TK_INTEGER
   48                | • TK_REAL
   49                | • expr OP_POWER expr
   50                | • expr OP_MULT expr
   51                | • expr OP_DIV expr
   52                | • expr OP_MOD expr
   53                | • expr OP_PLUS expr
   54                | • expr OP_MINUS expr
   55                | • OP_PLUS expr
   56                | • OP_MINUS expr
   57 identifier_expr: • TK_IDENTIFIER
   58                | • HASH TK_IDENTIFIER
   59                | • TK_IDENTIFIER DEL_LBRACKET TK_IDENTIFIER DEL_RBRACKET
   60                | • TK_IDENTIFIER DEL_LBRACKET arithmetic_expr DEL_RBRACKET
   61 relational_expr: • expr ROP_LESS expr
   62                | • expr ROP_LESSEQUALS expr
   63                | • expr ROP_GREATER expr
   64                | • expr ROP_GREATEREQUALS expr
   65                | • expr ROP_EQUALS expr
   66                | • expr ROP_NOTEQUALS expr
   67 logical_statements: • KW_NOT expr
   67                   | KW_NOT • expr
   68                   | • expr KW_AND expr
   69                   | • expr KW_OR expr
  112 function_statement: • TK_IDENTIFIER DEL_LPAR DEL_RPAR
  113                   | • TK_IDENTIFIER DEL_LPAR function_arguments DEL_RPAR

    TK_IDENTIFIER  shift, and go to state 39
    TK_INTEGER     shift, and go to state 40
    TK_REAL        shift, and go to state 41
    TK_STRING      shift, and go to state 42
    KW_TRUE        shift, and go to state 43
    KW_FALSE       shift, and go to state 44
    KW_NOT         shift, and go to state 45
    OP_PLUS        shift, and go to state 46
    OP_MINUS       shift, and go to state 47
    DEL_LPAR       shift, and go to state 48
    HASH           shift, and go to state 49

    expr                go to state 69
    arithmetic_expr     go to state 51
    identifier_expr     go to state 52
    relational_expr     go to state 53
    logical_statements  go to state 54
    function_statement  go to state 55


State 46
